--- a/ai-template-backend/package.json
+++ b/ai-template-backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
+    "pdf-parse": "^1.1.1",
     "pdfkit": "^0.17.1",
     "python-shell": "^5.0.0"
   }
