--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "file-saver": "^2.0.5",
     "multer": "^2.0.1",
