--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "file-saver": "^2.0.5",
+    "moment": "^2.30.1",
     "multer": "^2.0.1",
     "pdf-parse": "^1.1.1",
     "react": "^19.1.0",
+    "react-big-calendar": "^1.19.4",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "recharts": "^3.1.0",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^5.0.3"
   },
