--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "recharts": "^3.1.0",
+    "serve": "^14.2.4",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^5.0.3"
   },
